--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/nomen1/joke-tz",
+  "homepage":".",
   "name": "joke-tz",
   "version": "0.1.0",
   "private": true,
